Added content to lasagna.html and created images directory
Added actual content to lasagna.html instead of just boilerplate then
I created the images directory in the odin-recipes directory to store
project images

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,36 @@
 
     <body>
         <h1>Lasagna</h1>
+        <img src="../images/lasagna.jpeg" alt="A picture of lasagna">
+        <br>
+        <h2>Description</h2>
+        <p>Lasagna is wide, flat-shaped pasta, and possibly one of the oldest types of pasta. 
+            It can also refer to a dish made with several layers of lasagna sheets alternated with sauces and various other ingredients. 
+            It is an Italian baked meal (I must say a complete meal).</p>
+        
+        <h3>Ingrediants</h3>
+            <ul>
+            <li>Lasagna sheets (either dried or fresh pasta)</li>
+            <li>Ground meat</li>
+            <li>Tomato sauce or marinara sauce</li>
+            <li>Tomato paste (optional, for richer flavor)</li>
+            <li>Ricotta cheese </li>
+            <li>Mozzarella cheese (shredded or sliced)</li>
+            <li>Parmesan cheese (grated)</li>
+            <li>Onion (chopped)</li>
+            <li>Garlic (minced)</li>
+        </ul>
+        
+        <h3>Steps</h3>
+        <ol>
+            <li>Preheat the oven to 375°F (190°C).</li>
+            <li>Cook the meat sauce by browning the meat, adding tomato sauce, and seasoning.</li>
+            <li>Mix ricotta cheese with Parmesan, seasoning, and optional egg.</li>
+            <li>Cook lasagna sheets if required.</li>
+            <li>Layer the lasagna in a dish: sauce, pasta, ricotta mix, mozzarella, and repeat. </li>
+            <li>Cover with foil and bake for 25–30 minutes.</li>
+            <li>Remove foil and bake for another 10–15 minutes until golden.</li>
+            <li>Let it cool for 10–15 minutes before serving.</li>
+        </ol>
     </body>
 </html>
