--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Ohh Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna</a>
+        <ol>
+            <li><a href="./recipes/caeser-salad.html">Caser Salad</a></li>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/spaghetti.html">Spaghetti Bolognese</a></li>
+        </ol>
     </body>
 </html>
