--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Lasagna</h1>
-        <img src="../images/lasagna.jpeg" alt="A picture of lasagna">
+        <img src="../images/lasagna.jpeg" alt="A picture of lasagna" width="350">
         <br>
         <h2>Description</h2>
         <p>Lasagna is wide, flat-shaped pasta, and possibly one of the oldest types of pasta. 
@@ -26,7 +26,7 @@
             <li>Onion (chopped)</li>
             <li>Garlic (minced)</li>
         </ul>
-        
+
         <h3>Steps</h3>
         <ol>
             <li>Preheat the oven to 375°F (190°C).</li>
