Added css styling to all the pages
Added font color to the recipe pages headings and added color and
background color to index.html

--- a/recipes/caeser-salad.html
+++ b/recipes/caeser-salad.html
@@ -2,12 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="./caeser-style.css">
         <title>Caesar Salad</title>
     </head>
 
     <body>
         <h1>Caesar Salad</h1>
-        <img src="../images/caesarsalad.jpg" alt="A picture of Caesar Salad" width="350">
+        <img src="../images/caesarsalad.jpg" alt="A picture of Caesar Salad">
         <br>
         <h2>Description</h2>
         <p>Caesar Salad is a popular salad featuring crisp romaine lettuce, creamy Caesar dressing, crunchy croutons, and grated Parmesan cheese. 
