--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="./lasagna-style.css">
         <title>Home</title>
     </head>
 
