--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="spaghetti-style.css">
         <title>Spaghetti Bolognese</title>
     </head>
 
